--- a/2-network-policies/kubernetes/database/database-deployment.yaml
+++ b/2-network-policies/kubernetes/database/database-deployment.yaml
@@ -14,15 +14,21 @@ spec:
       labels:
         app: database-pod
     spec:
+      tolerations:
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
+          effect: "NoSchedule"
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
       containers:
-      - name: database-container
-        image: ghcr.io/karakean/kubernetes-security-database
-        ports:
-        - containerPort: 5432
-        env:
-        - name: POSTGRES_USER
-          value: "user"
-        - name: POSTGRES_PASSWORD
-          value: "password"
-        - name: POSTGRES_DB
-          value: "database"
+        - name: database-container
+          image: ghcr.io/karakean/kubernetes-security-database
+          ports:
+          - containerPort: 5432
+          env:
+          - name: POSTGRES_USER
+            value: "user"
+          - name: POSTGRES_PASSWORD
+            value: "password"
+          - name: POSTGRES_DB
+            value: "database"
