--- a/2-network-policies/kubernetes/web-app/web-app-deployment.yaml
+++ b/2-network-policies/kubernetes/web-app/web-app-deployment.yaml
@@ -14,6 +14,12 @@ spec:
       labels:
         app: web-app-pod
     spec:
+      tolerations:
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
+          effect: "NoSchedule"
+        - key: "node-role.kubernetes.io/control-plane"
+          operator: "Exists"
       containers:
         - name: web-app-container
           image: ghcr.io/karakean/kubernetes-security-web-app
