instruction in polish for the second task

--- a/2-network-policies/kubernetes/web-app/web-app-network-policy.yaml
+++ b/2-network-policies/kubernetes/web-app/web-app-network-policy.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: allow-web-app-outbound-to-database
+  name: web-app-network-policy
   namespace: task-2-namespace
 spec:
   podSelector:
