--- a/2-network-policies/kubernetes/task-2-namespace-with-network-policy.yaml
+++ b/2-network-policies/kubernetes/task-2-namespace-with-network-policy.yaml
@@ -8,7 +8,7 @@ metadata:
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
-  name: default-deny
+  name: default-deny-all
   namespace: task-2-namespace
 spec:
   podSelector: {}
